--- a/forlab.html
+++ b/forlab.html
@@ -5,8 +5,8 @@
     <title>My Details</title>
   </head>
   <body style="background-color: lightblue; color: darkblue;">
-    <h1>Your Name</h1>
-    <h2>Your details (reg no, section, etc.)</h2>
-    <p>Courses: Course 1, Course 2, Course 3</p>
+    <h1>A Infanto John</h1>
+    <h2>24BCE2772, CSE core</h2>
+    <p>BCSE203E-Web Programming</p>
   </body>
 </html>
